--- a/Mahboobehhaidarian.html
+++ b/Mahboobehhaidarian.html
@@ -86,11 +86,11 @@
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/Shaer.jpg" alt="" class="art">
+                                    <img src="assets/img/mabwork.jpg" alt="" class="art">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/Shaer.jpg" alt="" class="art">
+                                    <img src="assets/img/mahbwork2.jpg" alt="" class="art">
                                 </div>
 
 
