--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto " href="#work">Work</a></li>
+          <li><a class="nav-link scrollto " href="#work">Students</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -52,7 +52,6 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- navbar -->
@@ -83,17 +82,15 @@
     <section id="about" class="about-mf sect-pt4 route">
       <div class="container">
         <div class="row">
-          <div class="col-sm-12">
+          <div class="row-sm-1">
             <div class="box-shadow-full">
               <div class="row">
-                <div class="col-md-6">
+                <div class="row-md-1">
                   <div class="row">
-                    <div class="col-sm-6 col-md-5">
-                      <div class="about-img">
-                        <img src="assets/img/logo.PNG" class="img-fluid rounded b-shadow-a" alt="">
-                      </div>
+                    <div class="row-sm-6 row-md-5">
+
                     </div>
-                    <div class="col-sm-6 col-md-7">
+                    <div class="row-sm-6 row-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name of Class: </span> <span class="center">BDS</span></p>
                         <p><span class="title-s">Full Name Of Class: </span> <span>Business Development Services</span></p>
@@ -103,18 +100,25 @@
                   </div>
 
                 </div>
-                <div class="col-md-6">
+                <div class="row-md-6">
                   <div class="about-me pt-4 pt-md-0">
                     <div class="title-box-2">
                       <h5 class="title-left">
-                        About US
+                        Objectives US
                       </h5>
                     </div>
                     <p class="lead">
-                      Hello, my name is Masoumeh Rezai. I live in Herat, Afghanistan. I have been learning front-end
-                      programming for a year. During this time, I have worked on many projects in this sector and
-                      every
-                      day I try to increase my abilities in this sector
+                      Goal and Objectives of the training/ services:
+
+                      Intends to help adolescents and youths to organize their business idea and train them on
+                      business components that are essential for running a business.
+                      To train and develop capacities of micro businesses holders to overcome challenges and
+                      improve their operations.
+                      Support targeted micro and small businesses in promoting, developing, and sustaining growth.
+                      To identify, nurture and acquire new clients and opportunities for targeted micro
+                      businesses.
+                      Take part in Economic growth, employment generation as well as poverty alleviation in the
+                      targeted area.
                     </p>
 
                   </div>
@@ -156,7 +160,8 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Name: Mahsoumeh Nawrozi</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Development, Web design and programming</span> / <span class="w-date">
+                      <span class="w-ctegory"> Computer Science ,Web Development, Web design and programming</span> /
+                      <span class="w-date">
                         <a href="mahsuma.rezai8@gmail.com">mahsuma.rezai8@gmail.com</a></span>
                     </div>
                   </div>
@@ -181,7 +186,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title"> Sahar Badakhsh</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Painting (oil color, acrylic, water color ,wood and clay carving)</span>
+                      <span class="w-ctegory"> Art ,Painting (oil color, acrylic, water color wood and clay carving)</span>
                       / <span class="w-date"> saharbadaakhsh@gmail.com</span>
                     </div>
                   </div>
@@ -206,7 +211,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Sahar Fajr</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Graphic Design Programs, Painting, Computer Skills</span> /
+                      <span class="w-ctegory"> Art ,Graphic Design Programs, Painting, Computer Skills</span> /
                       <span class="w-date">sr.fajr@gmail.com</span>
                     </div>
                   </div>
@@ -223,7 +228,7 @@
             <div class="work-box">
               <a href="" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/netflix.PNG" alt="" class="img-fluid">
+                  <img src="assets/img/massa.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -396,8 +401,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title"> Fawzia Faizi</h2>
                     <div class="w-more">
-                      <span class="w-ctegory"> Graduated from Herat State University of Administration and Public
-                        Policy
+                      <span class="w-ctegory"> Graduated from Herat State University of Administration
                       </span> / <span class="w-date">fawziafaizi768@gmail.com
                       </span>
                     </div>
@@ -427,7 +431,7 @@
                     <h2 class="w-title"> Gulalia Meskinyar</h2>
                     <div class="w-more">
                       <span class="w-ctegory"> School Graduate
-                        Policy
+
                       </span> / <span class="w-date">ulalymeskinyar@gmail.com
                       </span>
                     </div>
@@ -592,25 +596,218 @@
             </div>
           </div>
           <!---->
+          <!---->
 
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/marwaa.jpg" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title"> Marwa mahboobi</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">
+                        Student
+                      </span> / <span class="w-date"> Mahboobifaiz6@gmail
+                        .com
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Marwa.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!---->
+          <!---->
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/gazal.jpg" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title"> Ghazal mahboobi</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">
+                        Stomatology
+                      </span> / <span class="w-date"> drmahboobi02@gmail.com
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Ghazal.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!---->
+
+          <!---->
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/somai.jpg" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title"> Somia Nazari</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">
+                        School Graduate
+                      </span> / <span class="w-date"> somayahnazary8@gmail.com
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Somia.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!---->
+          <!---->
+
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/roya.jpg" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title"> Roya Alizada</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">
+                        Sociology
+                      </span> / <span class="w-date"> raalizada@gmail.com
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="Roya.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!---->
         </div>
       </div>
     </section><!-- End Portfolio Section -->
 
+    <div class="inputs">
+      <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
 
+    </div>
 
-    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
 
     <ul id="myUL">
-      <li><a href="#">Adele</a></li>
-      <li><a href="#">Agnes</a></li>
+      <li><a href="Mahsoumeh.html">
+          Mahsoumeh Nawrozi
+        </a></li>
+      <li><a href="SaharBadakhsh.html">
+          Sahar Badakhsh
+        </a></li>
 
-      <li><a href="#">Billy</a></li>
-      <li><a href="#">Bob</a></li>
+      <li><a href="SaharFajr.html">
+          Sahar Fajr
+        </a></li>
 
-      <li><a href="#">Calvin</a></li>
-      <li><a href="#">Christina</a></li>
-      <li><a href="#">Cindy</a></li>
+      <li><a href="mahsamahboobi.html">
+          Mahsa mahboobi
+        </a></li>
+
+      <li><a href="JamilahAmiri.html">
+          Jamilah Amiri
+        </a></li>
+
+      <li><a href="Mahboobehhaidarian.html">
+          Mahboobeh Haidarian
+        </a></li>
+
+      <li><a href="Najmah.html">
+          Najmah Mohammad yar
+        </a></li>
+
+      <li><a href="somayaafghan.html">
+          somaya afghan
+        </a></li>
+
+      <li><a href="mayam.html">
+          Maryam Nazari
+        </a></li>
+
+      <li><a href="Fawzia.html">
+          Fawzia Faizi
+        </a></li>
+
+      <li><a href="Gulalia.html">
+          Gulalia Meskinyar
+        </a></li>
+
+      <li><a href="Samira.html">
+          Samira Karimi
+        </a></li>
+
+      <li><a href="Sonita.html">
+          Sonita karimi
+        </a></li>
+
+      <li><a href="Mahtab.html">
+          Mahtab Nazari
+        </a></li>
+
+      <li><a href="Shaheera.html">
+          Shaheera Rashidi
+        </a></li>
+
+      <li><a href="Fatemeh.html">
+          Fatemeh Ahmadi
+        </a></li>
+
+      <li><a href="Marwa.html">
+          Marwa mahboobi
+        </a></li>
+
+      <li><a href="Ghazal.html">
+          Ghazal mahboobi
+        </a></li>
+
+      <li><a href="Somia.html">
+          Somia Nazari
+        </a></li>
+
+      <li><a href="Roya.html">
+          Roya Alizada
+        </a></li>
+
     </ul>
 
 
