--- a/mahsamahboobi.html
+++ b/mahsamahboobi.html
@@ -105,12 +105,14 @@
                             <ul>
                                 <li><strong> Name</strong>: Mahsa mahboobi</li>
                                 <li><strong>Father Name</strong>:Mahboobshah </li>
-                                <li><strong>address:mahbano442@gmail.com</strong>: <a href="address:mahbano442@gmail.com">
-                                        mahsuma.rezai8@gmail.com</a></li>
+                                <li><strong>address:Third- District Herat Afghanistan</strong> <a href="address:mahbano442@gmail.com">
+                                        address:mahbano442@gmail.com </a></li>
                                 <li><strong>Phone Number</strong>: 0792609280 </li>
                                 <li><strong>Home Adress</strong>: District third </li>
                                 <li><strong> Filed of Study</strong>: stomatology </li>
                                 <li><strong> Skill</strong>: resine artist </li>
+                                <li><strong> Brand Name</strong>:Anil Art</li>
+
                                 <li><strong> Name Of Product</strong>: resine</li>
                             </ul>
                         </div>
