--- a/Roya.html
+++ b/Roya.html
@@ -82,15 +82,15 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/faw.jpg" alt="" class="art">
+                                    <img src="assets/img/rooya.jpg" alt="" class="art">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/faw.jpg" alt="" class="art">
+                                    <img src="assets/img/rooya.jpg" alt="" class="art">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/faw.jpg" alt="" class="art">
+                                    <img src="assets/img/rooya.jpg" alt="" class="art">
                                 </div>
 
 
@@ -103,25 +103,17 @@
                         <div class="portfolio-info">
                             <h3> Student information</h3>
                             <ul>
-                                <li><strong> Name</strong>:Fawzia Faizi</li>
-                                <li><strong>Father Name</strong>: Mullakhazan
+                                <li><strong> Name</strong>:  Roya  Alizada</li>
+                                <li><strong>Father Name</strong>: Mohammad Wali
                                 </li>
-                                <li><strong>Email Adress</strong>: <a href="fawziafaizi768@gmail.com">
-                                        fawziafaizi768@gmail.com/a></li>
-                                <li><strong>Phone Number</strong>: 0790879758</li>
-                                <li><strong>Home Adress</strong>:Herat, the sixth district of Pol Rangina</li>
-                                <li><strong> Filed of Study</strong>: Graduated from Herat State University of
-                                    Administration.
-                                    Midwifery student of the third semester of the kakashn sharq
-                                    Institute of Health Sciences. </li>
-                                <li><strong> Skill</strong>: computer, Pashto language, administrative and financial
-                                    management, leadership, letter writing, teaching various school subjects, CV
-                                    writing, application. Health departments (vaccination, injections, prescription
-                                    reading, suturing, nutrition, mental health, etc.) </li>
-                                <li><strong> Brand Name</strong>: Dexori Ganjineh Roshd</li>
-                                <li><strong> Name Of Product</strong>: decorating ornaments (making crowns and bridal
-                                    flowers and various beaded necklaces, and bracelets and flowers on the head, and
-                                    beading on clothes, and making bows and ...)</li>
+                                <li><strong>Email Adress</strong>: <a href="raalizada@gmail.com">
+                                    raalizada@gmail.com</a></li>
+                                <li><strong>Phone Number</strong>: 0795497738</li>
+                                <li><strong>Home Adress</strong> Herat, Farqa Street, 15 District </li>
+                                <li><strong> Filed of Study</strong>:Sociology</li>
+                                <li><strong> Skill</strong>: Administration and Financial, Project Manager, Tailored</li>
+                                <li><strong> Brand Name</strong>: Ansar Women Products</li>
+                                <li><strong> Name Of Product</strong>: Piece of Stone and Plaster</li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
@@ -146,9 +138,9 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="copyright-box">
-                        <p class="copyright">Fawzia Faizi</p>
+                        <p class="copyright">Roya  Alizada</p>
                         <div class="credits">
-                            <a href="fawziafaizi768@gmail.com">My Email</a>
+                            <a href="raalizada@gmail.com">My Email</a>
                         </div>
                     </div>
                 </div>
