--- a/SaharBadakhsh.html
+++ b/SaharBadakhsh.html
@@ -80,18 +80,19 @@
                     <div class="col-lg-8">
                         <div class="portfolio-details-slider swiper">
                             <div class="swiper-wrapper align-items-center">
-
+                                <div class="swiper-slide">
+                                    <img src="assets/img/shaerbbwork2.jpg" alt="" class="art">
+                                </div>
+                                
                                 <div class="swiper-slide">
                                     <img src="assets/img/Shaer.jpg" alt="" class="art">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/Shaer.jpg" alt="" class="art">
+                                    <img src="assets/img/shaerbbwork.jpg" alt="" class="art">
                                 </div>
 
-                                <div class="swiper-slide">
-                                    <img src="assets/img/Shaer.jpg" alt="" class="art">
-                                </div>
+
 
 
                             </div>
