--- a/Mahsoumeh.html
+++ b/Mahsoumeh.html
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/twitch.PNG" alt="">
+                  <img src="assets/img/twtch_one.PNG" alt="">
                 </div>
 
                 <div class="swiper-slide">
