--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <div class="logo"> <img src="./assets/img/logo.PNG" class="logoes"><a href="index.html">YHDO</a></div>
+      <div class="logo"> <img src="./assets/img/logo.PNG" class="logoes"><a href="index.html">Y.H.D.O</a></div>
 
 
       <nav id="navbar" class="navbar">
