--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <div class="work-box">
               <a href="" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/jmail.pdf" alt="" class="img-fluid">
+                  <img src="assets/img/gmail.PNG" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
