--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
-          <h1 class="hero-title mb-4">We ARE BDS STUDENTS IN YHDO CENTER</h1>
+          <h1 class="hero-title mb-4" id="text">YOUTH HEATH & DEVELOPMENT ORGANLZATION (YHDO)
+            center UNFPA AYE PROJECT HERAT MYC ,
+            BDS STUDENTS </h1>
           <p class="hero-subtitle"><span class="typed" data-typed-items="The merchant has no house, Buy cheap, sell expensive"></span></p>
         </div>
 
@@ -104,7 +106,7 @@
                   <div class="about-me pt-4 pt-md-0">
                     <div class="title-box-2">
                       <h5 class="title-left">
-                        Objectives US
+                        Objectives
                       </h5>
                     </div>
                     <p class="lead">
